--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=95R8ucHsaNu2T9zf8eonXidm2HqWdL5R"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,3 +42,8 @@
     -->
   </body>
 </html>
+
+
+
+ 
+
